project_fl-a/test/parser/bad/a_bad_print.py
# RUN: %chocopy-llvm %s 2>&1 | FileCheck %s.err

print(1, 2,)
